--- a/website/skin/theme/cool_ice/cool_ice.css
+++ b/website/skin/theme/cool_ice/cool_ice.css
@@ -57,7 +57,7 @@ div.day h2 {
 	background-position: center center;
 	height: 48px;
 	line-height: 48px;
-	text-align: center;
+/*	text-align: center; */
 	font-size: medium;
 }
 
